FuncCodeGeneration/RecursiveParsing.java
import java.io.PrintWriter;
import java.util.*;

/**
 * Implements the recursive decent parser 
 */

/**
 * @author Kannan
 * @author Danny Reinheimer
 *
 */
public class RecursiveParsing {

	private static int numVariables; // Keeps track of the number of variables
	private static int numFunctions; // Keeps track of the number of functions
	private static int numStatements; // Keeps track of the number of statements
	private static Vector<Pair<TokenNames, String>> inputTokens; // Stores the
																	// set of
																	// input
																	// tokens
	private static TokenNames currentToken; // shows what the current token
											// removed from the stack was for
											// debug purposes
	private static String currFunction;
	private static Pair<TokenNames, String> currentPair;
	private static VariableHashmap vHMap;
	private static String temp;
	private int labelIndex;
	private int whileIfLabel;
	private int whileRestLabel; 
	public Map<String, Integer> varCount;
	private Map<String, Integer> parameterMap = new HashMap<String, Integer>();
	private boolean newFuncStart;
	private int labelCount;
	private boolean returnExecuted;
	public boolean mainStarted;
	
	
	/*
		Helper function to print debug output.
	*/
	public void say(String str){
		System.out.print(str);
	}
	
	/*
		Helper function to print debug output.
	*/
	public void sayLine(String str){
		System.out.println(str);
	}

	/**
	 * Constructor initializes the fields and get the list of input tokens
	 * 
	 * @param inputTokens1
	 */
	public RecursiveParsing(Vector<Pair<TokenNames, String>> inputTokens1, Map<String, Integer> varCount) {
		numFunctions = 0;
		numVariables = 0;
		numStatements = 0;
		inputTokens = inputTokens1;
		currentToken = TokenNames.None;
		currFunction = "global"; //contains the name of the function being parsed or global
		vHMap = new VariableHashmap(); //id hashmap
		currentPair = new Pair<TokenNames, String>(TokenNames.None, "");
		temp = "";
		labelIndex = 0;	//counter for labels
		whileIfLabel = -1; //current if label for a while statement
		whileRestLabel = -1; //current rest label for a while statement
		this.varCount = varCount; // Variable count of each function
		labelCount = 1; // USeful for assigning labels
		returnExecuted = false;
		mainStarted = false;
	}

	public void instantiateMain(List<String> main){
		
		int count = 0;
		
		main.add("int const N=2000;\n\n");
		main.add("#include <assert.h>\n");
		main.add("#define top mem["+Integer.toString(count)+"]"); 
		main.add("#define base mem["+Integer.toString(count + 1)+"]"); 
		main.add("#define jumpReg mem["+Integer.toString(count + 2)+"]");
		main.add("#define membase "+Integer.toString(count + 3));
		main.add("int mem[2000];");
		main.add("\n\nint main() { \n\ntop = membase; \n mem[top] = 0; \n base = top + 1; \ntop = base + 2;\n");
		
	}
	
	public void instantiateLast(List<String> last){
		
		last.add("\n\njumpTable:\nswitch(jumpReg){\ncase 0: exit(0);\n");
		for(int i=1;i<labelCount;i++){
			last.add("case "+i+": goto label_"+i+";");
		}
		
		last.add("default: assert(0);\n}\n}");
	}
	
	/**
	 * initialized the parsing, converts the code into a tree and prints out the results when finished
	 */
	public void parse(PrintWriter pw, List<String> main, List<String> last) {
		
		Node progNode = new Node();
		//Node to declare global int array
		progNode.addChild(createDataDeclNode("global"));
		//Program node
		progNode.addChild(program());
		if (inputTokens.firstElement().getKey() == TokenNames.eof) {
			System.out.println("Pass variable " + numVariables + " function " + numFunctions + " statement " + numStatements);
			//Print the constructed tree
			progNode.print(pw, vHMap);
			instantiateMain(main);
			instantiateLast(last);
			//progNode.finalPrint(main, code);
			//printToFile(pw, main, code, last);
		} else {
			System.out.println("error");
		}
	}

	/**
	 * <program> --> <type name> ID <data decls> <func list> | empty
	 * 
	 * @return A node for <program> if passed or null if failed
	 */
	private Node program() {
		Node programNode = new Node();
		
		// check if we are at the eof
		if (inputTokens.firstElement().getKey() == TokenNames.eof) {
			return programNode;
		} else {
			Node tNode = type_name();
			if (true) {
				if (inputTokens.firstElement().getKey() == TokenNames.ID) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey(); // get the ID token
					temp = currentPair.getValue();
					if (inputTokens.elementAt(0).getKey() != TokenNames.left_parenthesis) {
						// A <id>
						//add data declaration to hashmap
						AddIdToHashMap(currFunction, temp);
					} else {
						//A function declaration
						//programNode.addChild(tNode);
						//programNode.addChild(createTerminal(temp));
					}
					if (programNode.addChild(data_decls())
							&& programNode.addChild(func_list())) {
						// check to see if the remaining token is eof is so this
						// is a legal syntax
						if (inputTokens.firstElement().getKey() == TokenNames.eof) {
							return programNode;
						}
					}
				}
			}
		}
		return null;
	}

	/*
	 * Adds idName to the hashmap corresponding to functionName
	 */
	private void AddIdToHashMap(String functionName, String idName) {
		if (!vHMap.containsKey(functionName, idName))
			vHMap.put(functionName, idName);
	}

	/*
	 * @return A node for <id> with name value if passed or null if failed
	 */
	private Node createIdNode(String value) {
		Node idNode = new Node();
		int index;
		//checks whether <id> with value is present in current function'c hashmap 
		if (!currFunction.equals("global")
				&& vHMap.containsKey(currFunction, value)) {
			index = vHMap.get(currFunction, value);
			idNode.index = index;
			idNode.setTerminalValue("local[" + index + "]");
			idNode.setTerminalValue("mem[base+" + index + "]");
			return idNode;
		} else 
			//checks whether <id> with value is present in global hashmap
			if (vHMap.containsKey("global", value)) {
			index = vHMap.get("global", value);
			idNode.local = false;//id corresponds to global array
			idNode.index = index;
			idNode.setTerminalValue("global[" + index + "]");
			idNode.setTerminalValue("mem[base+" + index + "]");
			return idNode;
		}

		return null;
	}

	/**
	 * <func list> --> empty | left_parenthesis <parameter list>
	 * right_parenthesis <func Z> <func list Z>
	 * 
	 * @return A node for <func list> if passed or null if failed
	 */
	private Node func_list() {
		Node fNode = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.left_parenthesis) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			//fNode.addChild(createTerminal(currentPair.getValue()));
			currFunction = temp;
			if (fNode.addChild(parameter_list())) {
				if (inputTokens.firstElement().getKey() == TokenNames.right_parenthesis) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					//fNode.addChild(createTerminal(currentPair.getValue()));
					if (fNode.addChild(func_Z())) {
						if (fNode.addChild(func_list_Z()))
							return fNode;
						else
							return null;
					}
					return null;
				}
				return null;
			}
			return null;
		}
		return fNode;
	}

	/**
	 * @return a node with string value
	 */
	private Node createTerminal(String value) {
		Node child = new Node();
		child.setTerminalValue(value);
		return child;
	}

	/**
	 * <func Z> --> semicolon | left_brace <data decls Z> <statements>
	 * right_brace
	 * 
	 * @return a node for <func Z> if passed or null if failed
	 */
	private Node func_Z() {
		Node f = new Node();
		// checks if the next token is a semicolon
		if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
			currentToken = inputTokens.remove(0).getKey();
			parameterMap.clear();
			//f.addChild(createSemiColonNode());
			return f;
		}

		if (inputTokens.firstElement().getKey() == TokenNames.left_brace) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			//f.addChild(createTerminal(currentPair.getValue()+"\n"));
			if (data_decls_Z() != null) {
				//local array declaration
				createDataDeclNode(currFunction);
				newFuncStart = true;
				
				if(currFunction.equals("main"))
					f.addChild(createTerminal("\n" + currFunction + "Func: ;\n"));
				
				else
					f.addChild(createTerminal(currFunction + "Func: ;"));
				
				
				int fixVarCount = 0;
				if(varCount.containsKey(currFunction)){
					fixVarCount = varCount.get(currFunction);
				}
				String[] list = new String[parameterMap.size()];
				for(String s:parameterMap.keySet()){
					int ind = parameterMap.size()-parameterMap.get(s);
					list[parameterMap.get(s)] = "mem[base+"+parameterMap.get(s)+"] = " + "mem[base-4-"+ind+"];";
				}

				for(String obj:list){
					f.addChild(createTerminal(obj));
				}
				
				if (f.addChild(statements())) {
					if (inputTokens.firstElement().getKey() == TokenNames.right_brace) {
						currentPair = inputTokens.remove(0);
						currentToken = currentPair.getKey();
						//f.addChild(createTerminal(currentPair.getValue()+"\n"));
						// Count the number of function definitions
						
						Node el = new Node();	// Epilog
						
						if(!currFunction.equals("main")){
							el.addChild(createTerminal("top = mem[base-3];"));
							el.addChild(createTerminal("jumpReg = mem[base-1];"));
							el.addChild(createTerminal("base = mem[base-4];"));
							el.addChild(createTerminal("goto jumpTable;"));
						}
						else{
							el.addChild(createTerminal("jumpReg = mem[base-1];"));
							el.addChild(createTerminal("goto jumpTable;\n\n"));
						}
						if(!returnExecuted){
							f.addChild(el);
						}
						returnExecuted = false;
						parameterMap.clear();
						numFunctions += 1;
						currFunction = "global";
						return f;
					}
					return null;
				}
				return null;
			}
			return null;
		}
		return null;
	}

	/**
	 * @param value = functionName
	 * @return a node for array declaration(local/global)
	 */
	private Node createDataDeclNode(String value) {
		Node d = new Node();
		d.setDataDeclValue(value);
		return d;
	}

	/**
	 * <func list Z> --> empty | <type name> ID left_parenthesis <parameter
	 * list> right_parenthesis <func Z> <func list Z>
	 * 
	 * @return a node for <func list Z> if passed or null if failed
	 */
	private Node func_list_Z() {
		Node fNode = new Node();
		if (fNode.addChild(type_name())) {
			if (inputTokens.firstElement().getKey() == TokenNames.ID) {
				currentPair = inputTokens.remove(0);
				currentToken = currentPair.getKey();
				//fNode.addChild(createTerminal(currentPair.getValue()));
				temp = currentPair.getValue();
				if (inputTokens.firstElement().getKey() == TokenNames.left_parenthesis) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					//fNode.addChild(createTerminal(currentPair.getValue()));
					currFunction = temp;
					if (fNode.addChild(parameter_list())) {
						if (inputTokens.firstElement().getKey() == TokenNames.right_parenthesis) {
							currentPair = inputTokens.remove(0);
							currentToken = currentPair.getKey();
							//fNode.addChild(createTerminal(currentPair.getValue()));
							if (fNode.addChild(func_Z())) {
								if (fNode.addChild(func_list_Z()))
									return fNode;
								else
									return null;
							}
						}
					}
				}
			}
			return null;
		}
		// return true for the empty rule
		return fNode;
	}

	/**
	 * <type name> --> int | void | binary | decimal
	 * 
	 * @return A node for <type name> if passed or null if failed
	 */
	private Node type_name() {
		Node tNode = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.Int
				|| inputTokens.firstElement().getKey() == TokenNames.Void
				|| inputTokens.firstElement().getKey() == TokenNames.binary
				|| inputTokens.firstElement().getKey() == TokenNames.decimal) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			//tNode.setTerminalValue(currentPair.getValue());
			return tNode;
		}
		return null;
	}

	/**
	 * <parameter list> --> empty | void <parameter list Z> | <non-empty list>
	 * 
	 * @return a node for <parameter list> if passed or null if failed
	 */
	private Node parameter_list() {
		Node pNode = new Node();
		// void <parameter list Z>
		if (inputTokens.firstElement().getKey() == TokenNames.Void) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			//pNode.addChild(createTerminal(currentPair.getValue()));
			if (pNode.addChild(parameter_list_Z()))
				return pNode;
			else
			return null;
		}
		// <non-empty list>
		else if (pNode.addChild(non_empty_list())) {
			return pNode;
		}
		// empty
		return pNode;
	}

	/**
	 * <parameter list Z> --> empty | ID <non-empty list prime>
	 * 
	 * @return a node for <parameter list Z> if passed or null if failed
	 */
	private Node parameter_list_Z() {
		Node p = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.ID) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			int index = parameterMap.size();
			parameterMap.put(currentPair.getValue(), index);
			//p.addChild(createTerminal(currentPair.getValue()));
			//paramters also need to be equated to array elements
			AddParameterToHashMap(currFunction, currentPair.getValue());
			if (p.addChild(non_empty_list_prime()))
				return p;
			else
			return null;
		}
		return p;
	}

	/**
	 * Adding the parameter to hashmap corresponding to function funcName
	 */
	public void AddParameterToHashMap(String funcName, String parameterName) {
		vHMap.putParameter(funcName, parameterName);
	}

	/**
	 * <non-empty list> --> int ID <non-empty list prime> | binary ID <non-empty
	 * list prime> | decimal ID <non-empty list prime>
	 * 
	 * @return a node for <non-empty list> if passed or null if failed
	 */
	private Node non_empty_list() {
		Node n = new Node();
		// check for int, binary, decimal
		if (inputTokens.firstElement().getKey() == TokenNames.Int
				|| inputTokens.firstElement().getKey() == TokenNames.binary
				|| inputTokens.firstElement().getKey() == TokenNames.decimal) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			//n.addChild(createTerminal(currentPair.getValue()));
			if (inputTokens.firstElement().getKey() == TokenNames.ID) {
				currentPair = inputTokens.remove(0);
				currentToken = currentPair.getKey();
				//n.addChild(createTerminal(currentPair.getValue()));
				//adding the parameter to hashmap
				AddParameterToHashMap(currFunction, currentPair.getValue());
				int index = parameterMap.size();
				parameterMap.put(currentPair.getValue(),index);
				if (n.addChild(non_empty_list_prime()))
					return n;
				else
					return null;
			}
		}
		return null;
	}

	/**
	 * <non-empty list prime> --> comma <type name> ID <non-empty list prime> |
	 * empty
	 * 
	 * @return a node for <non-empty list prime> if passed or null if failed
	 */
	private Node non_empty_list_prime() {
		Node n = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.comma) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			//n.addChild(createTerminal(currentPair.getValue()));
			if (n.addChild(type_name())) {
				if (inputTokens.firstElement().getKey() == TokenNames.ID) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					int index = parameterMap.size();
					parameterMap.put(currentPair.getValue(), index);
					//n.addChild(createTerminal(currentPair.getValue()));
					//adding parameter to hashmap
					AddParameterToHashMap(currFunction, currentPair.getValue());
					if (n.addChild(non_empty_list_prime()))
						return n;
					else
						return null;
				}
				return null;
			}
			return null;
		}
		return n;
	}

	/**
	 * <data decls> --> empty | <id list Z> semicolon <program> | <id list
	 * prime> semicolon <program>
	 * 
	 * @return a <data decls> node if passed or null if failed
	 */
	private Node data_decls() {
		Node dNode = new Node();
		if (id_list_Z() != null) {
			if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
				currentToken = inputTokens.remove(0).getKey();
				// dNode.addChild(createSemiColonNode());
				// count variable
				numVariables += 1;
				if (dNode.addChild(program())) { // data_decls_Z();
					Node dummyNode = new Node();
					return dummyNode;
				}
				else
					return null;
			}
			return null;
		}
		if (id_list_prime() != null) {
			if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
				currentToken = inputTokens.remove(0).getKey();
				// dNode.addChild(createSemiColonNode());
				// since we consume the first id before we get here count this
				// as a variable
				numVariables += 1;
				if (dNode.addChild(program())){
					Node dummyNode = new Node();
					return dummyNode;
					//return dNode;// data_decls_Z();
				}
				else
					return null;
			}
			// return false;
		}
		return dNode;
	}

	/**
	 * @return A node for <semicolon>
	 */
	private Node createSemiColonNode() {
		Node child = new Node();
		child.setTerminalValue(";\n");
		return child;
	}

	/**
	 * <data decls Z> --> empty | int <id list> semicolon <data decls Z> | void
	 * <id list> semicolon <data decls Z> | binary <id list> semicolon <data
	 * decls Z> | decimal <id list> semicolon <data decls Z>
	 * 
	 * @return A Node for <data decls Z> if passed or null if failed
	 */
	private Node data_decls_Z() {
		Node dNode = new Node();
		if (type_name() != null) {
			if (id_list() != null) {
				if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
					currentToken = inputTokens.remove(0).getKey();
					if (data_decls_Z() != null)
						return dNode;
					else
						return null;
				}
				return null;
			}
			return null;
		}
		return dNode;
	}

	/**
	 * <id list> --> <id> <id list prime>
	 * 
	 * @return a node for <id list> if passed or null if failes
	 */
	private Node id_list() {
		Node n = new Node();
		if (n.addChild(id())) {
			if (n.addChild(id_list_prime()))
				return n;
			else
				return null;
		}
		return null;
	}

	/**
	 * <id list Z> --> left_bracket <expression> right_bracket <id list prime>
	 * 
	 * @return a node <id list z> if passed or null if failed
	 */
	private Node id_list_Z() {
		Node i = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.left_bracket) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			// i.addChild(createTerminal(currentPair.getValue()));
			if (inputTokens.firstElement().getKey() == TokenNames.NUMBER) {
				currentPair = inputTokens.remove(0);
				currentToken = currentPair.getKey();
				vHMap.incrementNumVariables(currFunction,
						Integer.parseInt(currentPair.getValue()) - 1);
				if (inputTokens.firstElement().getKey() == TokenNames.right_bracket) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					// i.addChild(createTerminal(currentPair.getValue()));
					if (i.addChild(id_list_prime()))
						return i;
					else
						return null;
				}
			}
		}
		return null;
	}

	/**
	 * <id list prime> --> comma <id> <id list prime> | empty
	 * 
	 * @return a node <id list prime> if passed or null if failed
	 */
	private Node id_list_prime() {
		Node i = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.comma) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			// i.addChild(createTerminal(currentPair.getValue()));
			if (id() != null) {
				if (i.addChild(id_list_prime()))
					return i;
				else
					return null;
			}
			return null;
		}
		return i;
	}

	/**
	 * <id> --> ID <id Z>
	 * 
	 * @return a node <id Z> if passed or null if failed
	 */
	private Node id() {
		Node i = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.ID) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			AddIdToHashMap(currFunction, currentPair.getValue());
			if (i.addChild(id_Z()))
				return i;
			else
				return null;
		}
		return null;
	}

	/**
	 * <id Z> --> left_bracket <expression> right_bracket | empty
	 * 
	 * @return a node <id Z> if passed or null if failed
	 */
	private Node id_Z() {
		Node i = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.left_bracket) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			// i.addChild(createTerminal(currentPair.getValue()));
			if (inputTokens.firstElement().getKey() == TokenNames.NUMBER) {
				currentPair = inputTokens.remove(0);
				currentToken = currentPair.getKey();
				vHMap.incrementNumVariables(currFunction,
						Integer.parseInt(currentPair.getValue()) - 1);
				if (inputTokens.firstElement().getKey() == TokenNames.right_bracket) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					// i.addChild(createTerminal(currentPair.getValue()));
					// count the number of variables
					numVariables += 1;
					return i;
				}
				return null;
			}
			return null;
		}
		// count the number of variables
		numVariables += 1;
		return i;
	}

	/**
	 * <block statements> --> left_brace <statements> right_brace
	 * 
	 * @return a node <block statements> if passed or null if failed
	 */
	private Node block_statements() {
		Node b = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.left_brace) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
		//	b.addChild(createTerminal(currentPair.getValue()));
			if (b.addChild(statements())) {
				if (inputTokens.firstElement().getKey() == TokenNames.right_brace) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
				//	b.addChild(createTerminal(currentPair.getValue()));
					return b;
				}
			}
		}
		return null;
	}

	/**
	 * <statements> --> empty | <statement> <statements>
	 * 
	 * @return a node if passed or null if failed
	 */
	private Node statements() {
		Node s = new Node();

		if (s.addChild(statement())) {
			numStatements += 1;
			if (s.addChild(statements()))
				return s;
			else
				return null;
		}
		return s;
	}

	/**
	 * <statement> --> ID <statement Z> | <if statement> | <while statement> |
	 * <return statement> | <break statement> | <continue statement> | read
	 * left_parenthesis ID right_parenthesis semicolon | write left_parenthesis
	 * <expression> right_parenthesis semicolon | print left_parenthesis STRING
	 * right_parenthesis semicolon
	 * 
	 * @return a boolean indicating if the rule passed or failed
	 */
	private Node statement() {
		Node s = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.ID) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			/*
			 * if (inputTokens.elementAt(0).getKey() ==
			 * TokenNames.left_parenthesis)
			 * s.addChild(createTerminal(currentPair.getValue())); else
			 * s.addChild(createIdNode(currentPair.getValue()));
			 */
			if (s.addChild(statement_Z(currentPair.getValue())))
				return s;
			else
				return null;
		}
		if (s.addChild(if_statement())) {
			return s;
		}
		if (s.addChild(while_statement())) {
			return s;
		}
		if (s.addChild(return_statement())) {
			return s;
		}
		if (s.addChild(break_statement())) {
			return s;
		}
		if (s.addChild(continue_statement())) {
			return s;
		}
		if (inputTokens.firstElement().getKey() == TokenNames.read) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			s.addChild(createTerminal(currentPair.getValue()));
			if (inputTokens.firstElement().getKey() == TokenNames.left_parenthesis) {
				currentPair = inputTokens.remove(0);
				currentToken = currentPair.getKey();
				s.addChild(createTerminal(currentPair.getValue()));
				if (inputTokens.firstElement().getKey() == TokenNames.ID) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					s.addChild(createIdNode(currentPair.getValue()));
					if (inputTokens.firstElement().getKey() == TokenNames.right_parenthesis) {
						currentPair = inputTokens.remove(0);
						currentToken = currentPair.getKey();
						s.addChild(createTerminal(currentPair.getValue()));
						if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
							currentPair = inputTokens.remove(0);
							currentToken = currentPair.getKey();
							s.addChild(createSemiColonNode());
							return s;
						}
					}
				}
			}
			return null;
		}

		// write left_parenthesis <expression> right_parenthesis semicolon
		if (inputTokens.firstElement().getKey() == TokenNames.write) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			Node writeNode = createTerminal(currentPair.getValue());
			if (inputTokens.firstElement().getKey() == TokenNames.left_parenthesis) {
				currentPair = inputTokens.remove(0);
				currentToken = currentPair.getKey();
				Node lp = createTerminal(currentPair.getValue());
				// s.addChild(createTerminal(currentPair.getValue()));
				Node expNode = expression();
				if (s.addChild(expNode)) {
					s.addChild(writeNode);
					s.addChild(lp);
					s.addChild(createTerminal("mem[base+" + expNode.index + "]"));
					if (inputTokens.firstElement().getKey() == TokenNames.right_parenthesis) {
						currentPair = inputTokens.remove(0);
						currentToken = currentPair.getKey();
						s.addChild(createTerminal(currentPair.getValue()));
						if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
							currentPair = inputTokens.remove(0);
							currentToken = currentPair.getKey();
							s.addChild(createSemiColonNode());
							return s;
						}
					}
				}
			}
			return null;
		}

		// print left_parenthesis STRING right_parenthesis semicolon
		if (inputTokens.firstElement().getKey() == TokenNames.print) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			s.addChild(createTerminal(currentPair.getValue()));
			if (inputTokens.firstElement().getKey() == TokenNames.left_parenthesis) {
				currentPair = inputTokens.remove(0);
				currentToken = currentPair.getKey();
				s.addChild(createTerminal(currentPair.getValue()));
				if (inputTokens.firstElement().getKey() == TokenNames.STRING) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					s.addChild(createTerminal(currentPair.getValue()));
					if (inputTokens.firstElement().getKey() == TokenNames.right_parenthesis) {
						currentPair = inputTokens.remove(0);
						currentToken = currentPair.getKey();
						s.addChild(createTerminal(currentPair.getValue()));
						if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
							currentPair = inputTokens.remove(0);
							currentToken = currentPair.getKey();
							s.addChild(createSemiColonNode());
							return s;
						}
					}
				}
			}
			return null;
		}
		return null;
	}

	/**
	 * <statement Z> --> <assignment Z> | <func call>
	 * 
	 * @return a node if the rule passed or failed
	 */
	private Node statement_Z(String value) {
		Node s = new Node();
		if (s.addChild(assignment_Z(value))) {
			return s;
		} else if (s.addChild(func_call(value))) {
			return s;
		}
		return null;
	}

	/**
	 * <assignment Z> --> equal_sign <expression> semicolon | left_bracket
	 * <expression> right_bracket equal_sign <expression> semicolon
	 * @param value = name of left side id
	 * @return a node if rule passed or null if failed
	 */
	private Node assignment_Z(String value) {
		Node a = new Node();
		if (inputTokens.firstElement().getKey() == TokenNames.equal_sign) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			Node eNode = createTerminal(currentPair.getValue());
			Node expNode = expression();
			if (a.addChild(expNode)) {
				a.addChild(createIdNode(value));
				a.addChild(eNode);
				a.addChild(createTerminal("mem[base+" + expNode.index + "]"));
				if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					a.addChild(createSemiColonNode());
					return a;
				}
			}
			return null;
		}
		if (inputTokens.firstElement().getKey() == TokenNames.left_bracket) {
			currentPair = inputTokens.remove(0);
			currentToken = currentPair.getKey();
			Node expNode = expression();
			if (a.addChild(expNode)) {
				if (inputTokens.firstElement().getKey() == TokenNames.right_bracket) {
					currentPair = inputTokens.remove(0);
					currentToken = currentPair.getKey();
					if (inputTokens.firstElement().getKey() == TokenNames.equal_sign) {
						currentPair = inputTokens.remove(0);
						currentToken = currentPair.getKey();
						// a.addChild(createTerminal(currentPair.getValue()));
						Node exp1Node = expression();
						if (a.addChild(exp1Node)) {
							if (inputTokens.firstElement().getKey() == TokenNames.semicolon) {
								currentPair = inputTokens.remove(0);
								currentToken = currentPair.getKey();
								/* get the base indes*/
								int idBaseIndex = vHMap
										.getNumVariables(currFunction);
								vHMap.incrementNumVariables(currFunction, 1);
								a.addChild(createTerminal("mem[base+"
										+ idBaseIndex + "] ="));
								Node id = createIdNode(value);
								int id_base = id.index;
								a.addChild(createTerminal(Integer
										.toString(id_base)));
								a.addChild(createSemiColonNode());
								/* get the array element index*/
								int arrayIndex = vHMap
										.getNumVariables(currFunction);
								vHMap.incrementNumVariables(currFunction, 1);
								a.addChild(createTerminal("mem[base+" + arrayIndex
										+ "] ="));
								a.addChild(createTerminal("mem[base+"
										+ expNode.index + "] +"));
								a.addChild(createTerminal("mem[base+"
										+ idBaseIndex + "]"));
								a.addChild(createSemiColonNode());
								/* assign exp1 to array element*/
								if(id.local == true)
								a.addChild(createTerminal("mem[base + mem[base+"
										+ arrayIndex + "]] = mem[base"
										+ exp1Node.index + "]"));
								else
